1498092853 | 6 files | M bin/version.txt,  M content/vrmonitor/translations/vrmonitor_errors_english.txt,  M tools/steamvr_environments/game/bin/linuxsteamrt64/libvr_strings.txt,  M tools/steamvr_environments/game/steamtours/bin/linuxsteamrt64/libclient_strings.txt,  M tools/steamvr_environments/game/steamtours/pak01_dir.txt,  M tools/steamvr_environments/game/steamtours_addons/steamvr_home/pak01_dir.txt
https://steamdb.info/patchnotes/1907691/

--- a/content/vrmonitor/translations/vrmonitor_errors_english.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_english.txt
@@ -790,6 +790,16 @@
 "Warning_DismissableWarning_IssuesWithTwoDongles_Action" "Troubleshooting"
 "Warning_DismissableWarning_IssuesWithTwoDongles_ActionURL" "https://support.steampowered.com/kb_article.php?ref=8566-SDZC-9326#wireless-receivers"
 
+"Warning_DismissableWarning_NeedKnucklesDriver_Header" "Knuckles Driver Available"
+"Warning_DismissableWarning_NeedKnucklesDriver_Description" "You are using Knuckes controllers, but don't have the Knuckles driver installed."
+"Warning_DismissableWarning_NeedKnucklesDriver_Action" "Install Driver"
+"Warning_DismissableWarning_NeedKnucklesDriver_ActionURL" "vrmonitor://installdriver/knuckles"
+
+"Warning_DismissableWarning_NewDriverInstalled_Header" "New Driver Installed"
+"Warning_DismissableWarning_NewDriverInstalled_Description" "To use your new driver you will need to restart SteamVR."
+"Warning_DismissableWarning_NewDriverInstalled_Action" "Restart"
+"Warning_DismissableWarning_NewDriverInstalled_ActionURL" "vrmonitor://restartsystem"
+
 
 }
 }
